--- a/simplic-user/Simplic.User.UI/Views/ChangeUserPasswordView.xaml
+++ b/simplic-user/Simplic.User.UI/Views/ChangeUserPasswordView.xaml
@@ -3,8 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:simplic="http://schemas.simplic-systems.com/2016/xaml/presentation"
         xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation" 
-        Title="Change user's password" Height="117" Width="310"
-        WindowStartupLocation="CenterOwner" LayoutContext="Win_ChangeUserPwd">
+        Title="Change user's password" Height="330" Width="400"
+        WindowStartupLocation="CenterOwner" LayoutContext="Win_ChangeUserPwd" WindowMode="New">
     <Grid Margin="0,10,0,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -17,13 +17,6 @@
 
         <Label Grid.Column="0" Grid.Row="0" Margin="5" Content="{simplic:Localization Key=usermanagment_new_pwd_label}" />
         <telerik:RadPasswordBox Grid.Column="1" Grid.Row="0" Height="27" VerticalAlignment="Top" Name="_passwordBox"
-                                Margin="0,5,5,5" Width="191" WatermarkContent="{simplic:Localization Key=usermanagment_enter_new_pwd_label}" />
-
-        <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="{simplic:Localization Key=usermanagment_ok_label}" Height="27" Width="80" Margin="0,0,5,5"
-                    Command="{Binding Path=ChangePasswordCommand}" CommandParameter="{Binding ElementName=_passwordBox}"/>
-            <Button Content="{simplic:Localization Key=usermanagment_cancel_label}" Height="27" Width="80" Margin="0,0,5,5"
-                    Command="{Binding Path=CancelCommand}"/>
-        </StackPanel>
+                                Margin="0,5,5,5" Width="250" WatermarkContent="{simplic:Localization Key=usermanagment_enter_new_pwd_label}" />
     </Grid>
 </simplic:DefaultRibbonWindow>
